# morsl

./: .dev-notes.md  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  constants.py  dev-reset.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  models.py  morsl.sh  pyproject.toml  solver.py  tandoor_api.py  utils.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  push.yml  release.yml  scorecard.yml
app/: main.py
app/api/: dependencies.py  models.py
app/api/routes/: __init__.py  categories.py  custom_icons.py  generation.py  history.py  icon_mappings.py  meal_plan.py  menu.py  orders.py  profiles.py  proxy.py  schedules.py  settings.py  templates.py  weekly_generation.py
docs/: CODEBASE.md
docs/audits/: perf-audit-2026-04-05.md  security-audit-2026-04-05.md
docs/designs/: multi-user-brd.md  phase1-provider-abstraction.md  phase1-shopping-swap.md  phase2-menu-curation.md  stack-migration.md
morsl/: constants.py  db.py  migrate_json_to_db.py  models.py  solver.py  tandoor_api.py  utils.py
morsl/app/: config.py  main.py
morsl/app/api/: dependencies.py  models.py
morsl/app/api/routes/: __init__.py  categories.py  custom_icons.py  generation.py  history.py  icon_mappings.py  meal_plan.py  menu.py  orders.py  profiles.py  proxy.py  schedules.py  settings.py  shopping.py  templates.py  weekly_generation.py
morsl/providers/: __init__.py  base.py  tandoor.py
morsl/repositories/: __init__.py  history.py  menu.py  profile.py  settings.py  template.py  weekly_plan.py
morsl/services/: category_service.py  config_service.py  custom_icon_service.py  generation_service.py  history_service.py  icon_mapping_service.py  icon_service.py  meal_plan_service.py  menu_service.py  order_service.py  recipe_detail_service.py  scheduler_service.py  settings_service.py  shopping_service.py  sse_publisher.py  template_service.py  weekly_generation_service.py
scripts/: generate_icons.py  reset-pin.py
services/: category_service.py  config_service.py  custom_icon_service.py  generation_service.py  history_service.py  icon_mapping_service.py  icon_service.py  meal_plan_service.py  menu_service.py  order_service.py  recipe_detail_service.py  scheduler_service.py  settings_service.py  template_service.py  weekly_generation_service.py
tests/: conftest.py  test_api.py  test_architecture.py  test_category_service.py  test_db.py  test_generation_sse.py  test_history_service.py  test_menu_stream.py  test_migrate_json_to_db.py  test_models.py  test_order_service.py  test_profile_smoke.py  test_recipe_detail_service.py  test_scheduler_service.py  test_services.py  test_settings_service.py  test_shopping_service.py  test_solver.py  test_tandoor_api.py  test_template_service.py  test_utils.py  test_weekly_generation_service.py
web/: admin.html  index.html  manifest.json  service-worker.js  setup.html
web-vue/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-vue/public/css/: admin.css  setup.css  styles.css  theme-cast-iron.css  theme-cobalt.css  theme-ember.css  theme-espresso.css  theme-terracotta.css
web-vue/src/: App.vue  constants.ts  main.ts  theme-registry.ts
web-vue/src/__tests__/: constants.test.ts  formatting.test.ts  icons.test.ts  profiles-store.test.ts  settings-store.test.ts  setup-store.test.ts  theme-registry.test.ts
web-vue/src/components/admin/: AdminConfirmModal.vue  AdminHeader.vue  AdminRecipeModal.vue  AdminToasts.vue  BrandingImageField.vue  BrandingTab.vue  ConstraintEditor.vue  GenerateTab.vue  IconPicker.vue  OrdersTab.vue  PinGate.vue  ProfileDrawer.vue  ProfilesTab.vue  ScheduleForm.vue  SettingsTab.vue  TemplateDrawer.vue  WeeklyTab.vue
web-vue/src/components/menu/: Carousel.vue  CategoryBar.vue  DeckStrip.vue  GeneratingOverlay.vue  QrCorner.vue  RecipeCard.vue  RecipeModal.vue  (+1 more)
web-vue/src/composables/: useApi.ts  useCarousel.ts  useKiosk.ts  useSSE.ts  useSearch.ts  useTheme.ts
web-vue/src/router/: index.ts
web-vue/src/stores/: admin.ts  menu.ts  profiles.ts  settings.ts  setup.ts
web-vue/src/types/: api.ts
web-vue/src/utils/: formatting.ts  icons.ts
web-vue/src/views/: AdminView.vue  MenuView.vue  SetupView.vue
web/css/: admin.css  setup.css  styles.css  theme-basil.css  theme-fig.css  theme-honey.css  theme-moss.css  theme-paprika.css  theme-pewter.css  theme-porcelain.css  theme-rhubarb.css  theme-sage.css  theme-sand.css  theme-sea-salt.css
web/js/: admin.js  app.js  constants.js  icon-picker.js  icons.js  setup.js  shared.js  theme-registry.js
(+11 files in other folders)
