[project]
name = "morsl"
version = "0.1.0"
description = "Autocreate menus from Tandoor API"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Cron", email = "cron@featurecreep.dev" }]
keywords = ["meal-planning", "tandoor", "menu-generator", "docker", "self-hosted"]
dependencies = [
    "requests==2.33.1",
    "pulp==2.9.0",
    "tzlocal==5.3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.26",
    "apscheduler>=3.10,<4",
    "defusedxml>=0.7",
    "Pillow>=10.0,<13",
    "cairosvg>=2.7,<3",
    "python-slugify>=8.0.4",
    "cachetools>=5.3",
    "py-svg-hush>=0.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.12",  # linter, formatter, import sort
    "mypy==1.20.2",
    "pre-commit==4.5.1",
    "colorlog==6.10.1",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["morsl", "morsl.*"]

[tool.ruff]
fix = true
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "ANN",  # flake8 type annotations
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
]
ignore = [
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN204", "ANN202", "ANN401",
    "RUF012",
    "C901",  # complexity — un-suppress after Phase 5 refactoring
    "S101",  # assert in non-test code — used in solver debug
    "S104",  # binding to 0.0.0.0 — intentional in Docker
    "S311",  # random — used for LP variety, not security
]
fixable = ["ALL"]

external = ["broad-except", "direct-service"]  # custom architectural lint markers

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"morsl/app/api/routes/*.py" = ["B008"]  # FastAPI Depends() in defaults
"morsl/app/api/dependencies.py" = ["B008"]
"morsl/app/main.py" = ["B008"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
mypy-init-return = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require live Tandoor API",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
